# ministry-of-memory

./: DESIGN.md  DESIGN_NOTES.md  README.md  pyproject.toml
src/ministry_of_memory/: __init__.py  backup.py  config.py  crypto.py  disclosure.py  memory.py  models.py  registry.py  server.py
tests/: test_backup.py  test_crypto.py  test_memory.py  test_registry.py
